changed background to fixed on mobile (iOS Safari bug workaround)

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -4,6 +4,12 @@
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  @media only screen and (max-width: $cut) {
+    background-attachment: scroll;
+    background-position: center bottom;
+    background-size: cover;
+  }
   padding: 10px 0;
   margin-top: 100px;
   text-align: center;
